--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11</java.version>
         <junit.version>4.13.2</junit.version>
-        <cucumber.version>7.11.1</cucumber.version>
+        <cucumber.version>7.18.0</cucumber.version>
         <appium.version>9.0.0</appium.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>
+        <picocontainer.version>7.16.1</picocontainer.version>
     </properties>
     <dependencies>
         <dependency>
@@ -47,7 +48,7 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-picocontainer</artifactId>
-            <version>7.14.0</version>
+            <version>${picocontainer.version}</version>
             <scope>test</scope>
         </dependency>
 
